--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
               <li class="navigation__item"><a href="{{ site.baseurl }}/#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>
-              <li class="navigation__item"><a href="{{ site.url }}/" title="link to my portfolio {{ site.title }} " class="blog-button">About</a></li>
+              <li class="navigation__item"><a href="{{ site.url }}/" title="link to my portfolio {{ site.title }} " class="blog-button">Portfolio</a></li>
             </ul>
           </nav>
 
